added CSS styling

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 
             <h1>Web Development Vocabulary</h1>
 
-            <p>Welcome to Code:You WebDev!</p>
-
-            <p>This is another paragraph.</p>
+            <p class= "welcome">Welcome to Code:You WebDev!</p>
             
             <ul>
 
